# holssi

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  package.json  website.Dockerfile
.github/workflows/: boilerplate.yml  docker-image.yml  release.yml
app/: package-lock.json  package.json
app/src/: index.html  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src/assets/: project.js
app/src/lib/: BetterEntryScreen.js
app/src/project/temp/: project.json
boilerplate/: .gitignore  forge.config.js  holssi.json  package-lock.json  package.json
boilerplate/src/: index.html  index.js
boilerplate/src/lib/: BetterEntryScreen.js  README.md
boilerplate/src/project/: README.md
cli/: .gitignore  Cargo.toml
cli/src/: main.rs  part.rs  util.rs
src/: index.html
src-tauri/: Cargo.toml
