[package]
name = "holssi"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
dotent = "0.2.10"
flate2 = "1.0.25"
fs_extra = "1.2.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.38"
