[package]
name = "holssi"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
dotent = "0.2.10"
fs_extra = "1.2.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", optional = true, features = ["rustls-tls", "blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
website = ["reqwest"]
